Fix blockquote bug on mobile

--- a/css/default.css
+++ b/css/default.css
@@ -50,7 +50,7 @@ blockquote {
     font-size: 1.5em;
     line-height: 2.5em;
     quotes: "\201C""\201E";
-    white-space: pre;
+    white-space: pre-wrap;
 }
 blockquote::before {
     content: open-quote;
